Added graphQL queries for Customer Details

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,7 +1,2 @@
-{{page-title "GraphqlDemo"}}
-
-<LinkTo @route="customers">
-    Get Customers
-</LinkTo>
-
+{{page-title "GraphQL-Demo"}}
 {{outlet}}
