--- a/app/templates/customer.hbs
+++ b/app/templates/customer.hbs
@@ -10,7 +10,13 @@
 </ul>
 
 <button {{on "click" (fn this.deleteCustomer @model.id)}}>Delete</button>
-
+&nbsp;&nbsp;&nbsp;
+<LinkTo @route="customer.edit" @model={{@model.id}}>
+    Edit this Customer
+</LinkTo>
+&nbsp;&nbsp;&nbsp;
 <LinkTo @route="customers">
     Go Back
 </LinkTo>
+
+{{outlet}}
